--- a/templates/admin/adminbase3.html
+++ b/templates/admin/adminbase3.html
@@ -170,7 +170,6 @@ body{
         <a style="color:white;font-size: 100%;" class="navbar-brand" href="/admin-Produit">&nbsp;&nbsp;<font face = "Comic sans MS" size ="4"></font>Produit</a>
         <a style="color:white;font-size: 100%;"  class="navbar-brand" href="/admin-request">&nbsp;<font face = "Comic sans MS" size ="2"></font>Command</a>
         <a style="color:white;font-size: 100%;" class="navbar-brand" href="/admin-request-history">&nbsp;&nbsp;<font face = "Comic sans MS" size ="4"></font>Historique Command</a>
-        <a style="color:white;font-size: 100%;" class="navbar-brand" href= "/Achateur/make-request/{{user.id}}">&nbsp;&nbsp;<font face = "Comic sans MS" size ="4"></font>Ajouter Command</a>
 
         <a style="color:white;font-size: 100%;" class="navbar-brand" href="/admin-Fournisseur">&nbsp;&nbsp;<font face = "Comic sans MS" size ="4"></font>Fournisseur</a>
 
@@ -190,7 +189,7 @@ body{
 
                         </td>
                         <td>
-                          <a class="nav-link" style="color: white;"  href="#"><i class="fa fa- user"></i>{{user.last_name}}</a>
+                          <a class="nav-link" style="color: white;"  href="#"><i class="fa fa- user"></i>{{user.username}}</a>
 
                         </td>
                       </tr>
