--- a/templates/Achateur/my_request.html
+++ b/templates/Achateur/my_request.html
@@ -1,4 +1,4 @@
-{% extends 'admin/adminbase.html' %}
+{% extends 'Achateur/Achateurbase.html' %}
 {% block content %}
 {% load widget_tweaks %}
 {%load static%}
