--- a/templates/admin/admin_Produit.html
+++ b/templates/admin/admin_Produit.html
@@ -1,4 +1,4 @@
-{% extends 'admin/adminbase.html' %}
+{% extends 'admin/adminbase4.html' %}
 {% block content %}
 {% load widget_tweaks %}
 {%load static%}
