--- a/templates/admin/adminbase4.html
+++ b/templates/admin/adminbase4.html
@@ -164,10 +164,7 @@ body{
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-danger">
         <a style="color:white;" class="navbar-brand" href="/">&nbsp;<font face = "Comic sans MS" size ="5">Achats</font></a>
         <a style="color:white;font-size: 100%;" class="navbar-brand" href="/admin-Produit">&nbsp;&nbsp;<font face = "Comic sans MS" size ="4"></font>Produit</a>
-        <a style="color:white;font-size: 100%;"  class="navbar-brand" href="/admin-request">&nbsp;<font face = "Comic sans MS" size ="2"></font>Command</a>
-        <a style="color:white;font-size: 100%;" class="navbar-brand" href="/admin-request-history">&nbsp;&nbsp;<font face = "Comic sans MS" size ="4"></font>Historique Command</a>
         <a style="color:white;font-size: 100%;" class="navbar-brand" href="/admin-Fournisseur">&nbsp;&nbsp;<font face = "Comic sans MS" size ="4"></font>Fournisseur</a>
-        <a style="color:white;font-size: 100%;" class="navbar-brand" href="/admin-Achateur">&nbsp;&nbsp;<font face = "Comic sans MS" size ="4"></font>Achateur</a>
 
       
         <div class="navbar-collapse collapse w-70 order-3 dual-collapse2">
@@ -185,7 +182,7 @@ body{
 
                         </td>
                         <td>
-                          <a class="nav-link" style="color: white;"  href="#"><i class="fa fa- user"></i>{{user.username}}</a>
+                          <a class="nav-link" style="color: white;"  href="#"><i class="fa fa- user"></i>{{user.last_name}}</a>
 
                         </td>
                       </tr>
